[package]
name = "bunker"
edition = "2018"
version = "0.1.0"
authors = ["Frank Murphy <fmurphy@instructure.com>"]

[dependencies]
log = "0.4"
parquet = "5.5"
rusqlite = { version = "0.26", features = ["time"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
